--- a/main.css
+++ b/main.css
@@ -20,18 +20,28 @@ body {
 
 .book {
 	width:450px;
-	background-color: rgba(255,255,255,1);
+	height:100px;
 	margin:20px auto;
 	border: 5px solid orange;
+	position: relative;
 	display: block;
 }
+								/*.overlay {
+									background-color: rgba(25,255,255,1);
+									position: absolute;
+									width:inherit;
+									height:inherit;
+									transition: all 1s ease;
+								}*/
 /**/
 /**/
 /**/
 /**/
-.book:hover {
-	width:450px;
-}
+								/*.overlay:active {
+									height: 0px;
+									background-color: rgba(255,255,255,0);
+									z-index: -1;
+								}*/
 /**/
 /**/
 /**/
@@ -39,7 +49,7 @@ body {
 .example1-button {
 	width: 200px;
 	height: 42px;
-	margin: 50px auto;
+	margin: 14px auto;
 	border-radius: 8px;
 	font size: 50px;
 	line-height: 33px;
@@ -50,21 +60,20 @@ body {
 	box-shadow: inset 0 -10px 0px rgb(202, 191, 191);
 
 	display: block;
-	position: inherit;
 	text-align: center;
 	font-family: Helvetica;
 	transition: all .1s ease;
 }
 
 .example1-button:hover {
-	margin-top: 60px;
+	margin-top: 24px;
 	height: 32px;
 	box-shadow: inset 0 -2px 0 rgb(202, 191, 191);
 	line-height: 30px;
 }
 
 .example1-button:active {
-	margin-top: 63px;
+	margin-top: 27px;
 	height: 29px;
 	box-shadow: inset 0 0px 0 rgb(202, 191, 191);
 	line-height: 30px;
