--- a/main.css
+++ b/main.css
@@ -5,6 +5,11 @@ body {
 	background-color: #a3b3bf;
 }
 
+p {
+	font-family: helvetica;
+	font-size: 16px;
+}
+
 .wrapper {
 	width:600px;
 	margin:0 auto;
@@ -20,7 +25,7 @@ body {
 
 .book {
 	width:450px;
-	height:100px;
+	height:100%;
 	margin:20px auto;
 	border: 5px solid orange;
 	position: relative;
@@ -42,50 +47,3 @@ body {
 									background-color: rgba(255,255,255,0);
 									z-index: -1;
 								}*/
-/**/
-/**/
-/**/
-/**/
-.example1-button {
-	width: 200px;
-	height: 42px;
-	margin: 14px auto;
-	border-radius: 8px;
-	font size: 50px;
-	line-height: 33px;
-	color: #fff;
-
-	background: #B7DEED;
-	text-shadow: 0px -1px 0px #98C4D5;
-	box-shadow: inset 0 -10px 0px rgb(202, 191, 191);
-
-	display: block;
-	text-align: center;
-	font-family: Helvetica;
-	transition: all .1s ease;
-}
-
-.example1-button:hover {
-	margin-top: 24px;
-	height: 32px;
-	box-shadow: inset 0 -2px 0 rgb(202, 191, 191);
-	line-height: 30px;
-}
-
-.example1-button:active {
-	margin-top: 27px;
-	height: 29px;
-	box-shadow: inset 0 0px 0 rgb(202, 191, 191);
-	line-height: 30px;
-}
-/**/
-/**/
-/**/
-/**/
-.example2-growing {
-	width:400px;
-	height:500px;
-	margin:50px auto;
-	font-family: helvetica;
-
-}
