--- a/main.css
+++ b/main.css
@@ -5,8 +5,22 @@ body {
 	background-color: #a3b3bf;
 }
 
+h1 {
+	font-family: 'Cinzel Decorative', cursive;
+	margin: 20px;
+	padding-top:40px;
+}
+
+h2 {
+	font-family: 'Cinzel Decorative', cursive;
+	margin: 20px;
+	text-align: left;
+}
+
+
 p {
 	font-family: helvetica;
+	display: inline-block;
 	font-size: 16px;
 	margin: 20px;
 	text-align: left;
