--- a/body.css
+++ b/body.css
@@ -91,7 +91,7 @@
 			/**/
 			/**/
 
-.book-example3 {
+/*.book-example3 {
 	width:450px;
 	height:450px;
 	margin:20px auto;
@@ -164,7 +164,7 @@
         -webkit-transform: translate3d(0px,0px,0px;  
         	-webkit-transform: scale(1,1);
     }  
-}  
+}  */
 
 			/**/
 			/**/
@@ -174,51 +174,88 @@
 			/**/
 			/**/
 
-.wrapper {
-	width:600px;
-	margin:0 auto;
-	background-color: #fff;
-	text-align: center;
-}
-
-.container	{
-	width:500px;
-	margin:0 auto;
-	padding-bottom:20px;
-}
-
-.book {
-	width:450px;
-	height:100%;
-	margin:20px auto;
-	border: 5px solid orange;
-	position: relative;
-	display: block;
-}
-
-.example4 {
-	width: 200px;
-	height: 42px;
-	margin: 20px auto;
-	border-radius: 8px;
-	font size: 50px;
-	line-height: 33px;
-	color: #fff;
-
-	background: #B7DEED;
-	text-shadow: 0px -1px 0px #98C4D5;
-	box-shadow: inset 0 -10px 0px rgb(202, 191, 191);
-
-	display: block;
-	text-align: center;
-	font-family: Helvetica;
-	transition: all .1s ease;
-}
-
-.anything-please {
+.example4{
 	width:200px;
 	height:200px;
-	margin:20px;
-	padding:20px;
-	background-color: #000;
+	margin:20px auto;
+	background-color: transparent;
+				-webkit-animation: words 1s all ease; 
+			-webkit-animation-fill-mode: forwards; 
 }
+
+.ball-container {
+	width:200px;
+	height:200px;
+	margin:20px auto;
+	background-color: #1d1d1d;
+	transition: all 5s ease;
+}
+
+.pretty-ball {
+	margin:0 auto;
+	position: relative;
+	top: 50px;
+	color: rgba(0,0,0, 0);
+	background: transparent;
+	width: 100px;
+	height: 100px;
+	border: 3px solid white;
+	border-radius: 100px;
+	-webkit-box-shadow: inset 0px 0px 10px 3px rgba(255, 255, 190, .60);
+	box-shadow: inset 0px 0px 10px 3px rgba(255, 255, 190, .60);
+
+		-webkit-animation-name: passed-level;
+	animation-name: passed-level;
+    -webkit-animation-duration: 1s;
+    animation-duration: 1s;
+    -webkit-animation-iteration-count: infinite;
+    animation-iteration-count: infinite;
+/*    animation-direction: alternate;
+    -webkit-animation-direction: alternate;*/
+    -webkit-animation-timing-function: ease;
+    animation-timing-function: ease;
+    -webkit-animation-delay: 1s;
+    animation-delay: 1s;
+}
+
+
+/*.pretty-ball:hover {
+-webkit-box-shadow: 0px 0px 7px 2px rgba(255, 255, 190, .40);
+	box-shadow: 0px 0px 7px 2px rgba(255, 255, 190, .40);
+		-webkit-animation-name: passed-level;
+	animation-name: passed-level;
+    -webkit-animation-duration: 1s;
+    animation-duration: 1s;
+    -webkit-animation-iteration-count: infinite;
+    animation-iteration-count: infinite;
+    animation-direction: alternate;
+    -webkit-animation-direction: alternate;
+    -webkit-animation-timing-function: linear;
+    animation-timing-function: linear;
+    -webkit-animation-delay: 1.5s;
+    animation-delay: 1.5s;
+}*/
+
+@-webkit-keyframes passed-level {
+
+	0% {
+			-webkit-box-shadow: inset 0px 0px 10px 3px rgba(255, 255, 190, .60);
+			box-shadow: inset 0px 0px 10px 3px rgba(255, 255, 190, .60);
+	}
+	100% {
+			-webkit-box-shadow: 0px 0px 7px 2px rgba(255, 255, 190, .40);
+			box-shadow: 0px 0px 7px 2px rgba(255, 255, 190, .40);
+	}
+
+
+
+
+
+
+
+
+
+
+
+
+
