--- a/body.css
+++ b/body.css
@@ -221,6 +221,253 @@
 	transition: background-color .1s ease-out;
 }
 
+			/**/
+			/**/
+			/**/
+			/**/
+			/**/
+			/**/
+			/**/
+
+.example5-wrapper {
+	width: 400px;
+	margin: 20px auto;
+
+}
+
+.example5 {
+  width: 350px;
+  height: 220px;
+  /*top: 60px;*/
+  margin: 0 auto;
+  /*overflow: hidden;*/
+  position: relative;
+ }
+
+.example5-text {
+	width: 320px;
+  height: 200px;
+  /*left: 37px;*/
+	margin: 0 auto;
+  background: white;
+  box-shadow: 0px 0px 10px rgba(0,0,0,0.2);
+  position: relative;  
+}
+
+.example5-text-inside {
+	font-family: 'Cinzel Decorative', cursive;
+	width: 280px;
+  height: 150px;
+  margin: 0 auto;
+	top: 15px;
+	padding-top: 20px;
+  background: white;
+  background-image: url(img/);
+  box-shadow: inset 0px 0px 20px rgba(0,0,0,0.2);
+  position: relative;
+  font-size: 50px;
+  color: rgba(227,227,227,0.5);; 
+}
+
+/*.example5-text-inside:hover {
+    animation: shake 1s infinite;
+  -webkit-animation: shake 5s infinite alternate ease; 
+} */
+
+/*.example5-text:hover {
+   animation: rattle 1s infinite;
+  -webkit-animation: shake 2s infinite alternate ease-in-out; 
+} */
+
+/*@-webkit-keyframes shake {  
+  0% {  
+      -webkit-transform: rotate(0deg) translate3d(0px, 0px, 0px);
+  }  
+  40% {  
+      -webkit-transform: rotate(-3deg) translate3d(-2px, -1px, 0px);  
+  }
+  100% {  
+      -webkit-transform: rotate(0deg) translate3d(0px, 0px, 0px);  
+  }  
+}  
+
+
+@-webkit-keyframes rattle {  
+  0% {  
+      -webkit-transform: rotate(0deg) translate3d(0px, 0px, 0px);
+  }  
+  40% {  
+      -webkit-transform: rotate(-3deg) translate3d(-2px, -1px, 0px);  
+  }
+  100% {  
+      -webkit-transform: rotate(1deg) translate3d(0px, 0px, 0px);  
+  }  
+}  */
+
+			/**/
+			/**/
+			/**/
+			/**/
+			/**/
+			/**/
+			/**/
+
+body {
+	margin: 0;
+	padding: 0;
+	border: 0;
+	background-color: #a3b3bf;
+}
+
+h1 {
+	font-family: 'Cinzel Decorative', cursive;
+	margin: 10px;
+	padding-top:40px;
+}
+
+h2 {
+	font-family: 'Cinzel Decorative', cursive;
+	margin: 20px;
+	text-align: left;
+}
+
+
+p {
+	font-family: helvetica;
+	display: inline-block;
+	font-size: 16px;
+	margin: 10px;
+	text-align: left;
+}
+
+.wrapper {
+	width:600px;
+	margin:0 auto;
+	background-color: #fff;
+	text-align: center;
+}
+
+.container	{
+	width:500px;
+	margin:0 auto;
+	padding-bottom:20px;
+}
+
+.book {
+	width:450px;
+	height:100%;
+	margin:20px auto;
+	border: 5px solid orange;
+	position: relative;
+	display: block;
+	text-align: left;
+}
+
+			/**/
+			/**/
+			/**/
+			/**/
+			/**/
+			/**/
+			/**/
+
+
+.example6-wrapper {
+	margin: 20px auto;
+}
+
+.example6-box {
+	margin: 0 auto;
+	width: 100px;
+	height: 90px;
+	position: relative;
+	background-color: white;
+	box-shadow: 0px 0px 10px rgba(0,0,0,0.2);
+	overflow: hidden;
+	-webkit-transition: all 1s ease;
+ }
+
+ .example6-hello {
+ 	font-family: 'Cinzel Decorative', cursive;
+ 	position: relative;
+ 	left: 10px;
+ 	color: white;
+ 	font-size:1px;
+
+ }
+
+ .example6-box:hover {
+ 	-webkit-transform: rotate(180deg);
+ }
+
+  .example6-box:hover .example6-hello {
+  color: rgb(51, 51, 51);
+  font-size:30px;
+	-webkit-transition: all 1s 1s linear;
+ 	-webkit-transform: rotate(180deg);
+ }
+
+			/**/
+			/**/
+			/**/
+			/**/
+			/**/
+			/**/
+			/**/
+
+
+.example7-wrapper {
+	margin: 20px auto;
+}
+
+.example7-box {
+	margin: 0 auto;
+	width: 100px;
+	height: 100px;
+	position: relative;
+	display: inline-block;
+	background-color: beige;
+	overflow: hidden;
+	border-radius: 100px;
+	-webkit-transform: scale(.8,.8);
+	box-shadow: inset 0px 0px 20px rgba(204,204,171,0.5);
+	transition: background-color .5s ease,
+							border-radius .5s ease,
+							box-shadow .1s ease;
+}
+ }
+
+ .example7-box:hover {
+ 	border-radius: 0px;
+ }
+
+ .example7-box:active {
+ 	border-radius: 0px;
+ 	background-color: tan;
+ 	box-shadow: inset 0px 0px 10px rgba(166,133,88,0.5);
+ 	transition: all .5s ease;
+ 	-webkit-transform: rotate(180deg);
+ }
+
+			/**/
+			/**/
+			/**/
+			/**/
+			/**/
+			/**/
+			/**/
+
+.example8-wrapper {
+margin: 20px auto;
+}	
+
+.example8-temp {
+	margin: 0 auto;
+	width: 100px;
+	height: 100px;
+	position: relative;
+	background-color: red;
+}
 
 
 
