--- a/body.css
+++ b/body.css
@@ -261,12 +261,13 @@
   margin: 0 auto;
 	top: 15px;
 	padding-top: 20px;
+	padding-left: 16px;
   background: white;
   background-image: url(img/);
   box-shadow: inset 0px 0px 20px rgba(0,0,0,0.2);
   position: relative;
   font-size: 50px;
-  color: rgba(227,227,227,0.5);; 
+  color: rgba(227,227,227,0.5); 
 }
 
 /*.example5-text-inside:hover {
@@ -323,12 +324,14 @@ h1 {
 	font-family: 'Cinzel Decorative', cursive;
 	margin: 10px;
 	padding-top:40px;
+	color: #363636;
 }
 
 h2 {
 	font-family: 'Cinzel Decorative', cursive;
 	margin: 20px;
 	text-align: left;
+	color: #363636;
 }
 
 
@@ -338,6 +341,7 @@ p {
 	font-size: 16px;
 	margin: 10px;
 	text-align: left;
+	color: #363636;
 }
 
 .wrapper {
@@ -360,7 +364,7 @@ p {
 	border: 5px solid orange;
 	position: relative;
 	display: block;
-	text-align: left;
+	/*text-align: left;*/
 }
 
 			/**/
@@ -390,7 +394,7 @@ p {
  .example6-hello {
  	font-family: 'Cinzel Decorative', cursive;
  	position: relative;
- 	left: 10px;
+ 	/*left: 10px;*/
  	color: white;
  	font-size:1px;
 
@@ -401,7 +405,7 @@ p {
  }
 
   .example6-box:hover .example6-hello {
-  color: rgb(51, 51, 51);
+  color: #363636;;
   font-size:30px;
 	-webkit-transition: all 1s 1s linear;
  	-webkit-transform: rotate(180deg);
@@ -458,19 +462,41 @@ p {
 			/**/
 
 .example8-wrapper {
-margin: 20px auto;
+	margin: 20px auto;
 }	
 
-.example8-temp {
+.example8-bg {
 	margin: 0 auto;
-	width: 100px;
-	height: 100px;
+	width: 300px;
+	height: 50px;
 	position: relative;
-	background-color: red;
+	background-color: white;
+	-webkit-transform: rotate(-2deg) skew(0,0);
+	 box-shadow: 0px 0px 20px rgba(0,0,0,0.2);
 }
 
+.example8-core {
+	margin: 0 auto;
+	width: 340px;
+	height: 40px;
+	top: -45px;
+	position: relative;
+	background-color: white;
+	-webkit-transform: rotate(0deg) skew(46deg,0);
+	 box-shadow: 0px 0px 20px rgba(0,0,0,0.2);
+}
 
-
+.example8-name {
+	 	font-family: 'Tinos', serif;
+	 	text-transform: uppercase;
+	 	position: relative;
+	 	color: #F4F4F4;
+	 	font-size: 38px;
+	 	bottom:97px;
+	 	/*left:15%;*/
+	 	text-shadow:0px 1px 0px #ECECEC;
+	 	-webkit-transform: rotate(0deg) skew(-8deg,0);
+}
 
 
 
