--- a/main.css
+++ b/main.css
@@ -9,12 +9,14 @@ h1 {
 	font-family: 'Cinzel Decorative', cursive;
 	margin: 10px;
 	padding-top:40px;
+	color: #363636;
 }
 
 h2 {
 	font-family: 'Cinzel Decorative', cursive;
 	margin: 20px;
 	text-align: left;
+	color: #363636;
 }
 
 
@@ -24,6 +26,7 @@ p {
 	font-size: 16px;
 	margin: 10px;
 	text-align: left;
+	color:#363636;
 }
 
 .wrapper {
