--- a/body.css
+++ b/body.css
@@ -184,6 +184,7 @@
 }
 
 .ball-container {
+	text-align: center;
 	width:200px;
 	height:200px;
 	margin:20px auto;
@@ -232,6 +233,7 @@
 .example5-wrapper {
 	width: 400px;
 	margin: 20px auto;
+	text-align: center;
 
 }
 
@@ -261,7 +263,7 @@
   margin: 0 auto;
 	top: 15px;
 	padding-top: 20px;
-	padding-left: 16px;
+	padding-left: 0px;
   background: white;
   background-image: url(img/);
   box-shadow: inset 0px 0px 20px rgba(0,0,0,0.2);
@@ -329,8 +331,9 @@ h1 {
 
 h2 {
 	font-family: 'Cinzel Decorative', cursive;
-	margin: 20px;
+	margin: 10px;
 	text-align: left;
+	padding-top: 10px;
 	color: #363636;
 }
 
@@ -348,7 +351,7 @@ p {
 	width:600px;
 	margin:0 auto;
 	background-color: #fff;
-	text-align: center;
+	text-align: left;
 }
 
 .container	{
@@ -378,6 +381,7 @@ p {
 
 .example6-wrapper {
 	margin: 20px auto;
+	text-align: center;
 }
 
 .example6-box {
@@ -422,6 +426,7 @@ p {
 
 .example7-wrapper {
 	margin: 20px auto;
+	text-align: center;
 }
 
 .example7-box {
@@ -463,6 +468,7 @@ p {
 
 .example8-wrapper {
 	margin: 20px auto;
+	text-align: center;
 }	
 
 .example8-bg {
@@ -470,6 +476,7 @@ p {
 	width: 300px;
 	height: 50px;
 	position: relative;
+	top:44px;
 	background-color: white;
 	-webkit-transform: rotate(-2deg) skew(0,0);
 	 box-shadow: 0px 0px 20px rgba(0,0,0,0.2);
@@ -479,7 +486,7 @@ p {
 	margin: 0 auto;
 	width: 340px;
 	height: 40px;
-	top: -45px;
+	/*top: -45px;*/
 	position: relative;
 	background-color: white;
 	-webkit-transform: rotate(0deg) skew(46deg,0);
@@ -492,15 +499,114 @@ p {
 	 	position: relative;
 	 	color: #F4F4F4;
 	 	font-size: 38px;
-	 	bottom:97px;
+	 	bottom:52px;
 	 	/*left:15%;*/
 	 	text-shadow:0px 1px 0px #ECECEC;
 	 	-webkit-transform: rotate(0deg) skew(-8deg,0);
 }
 
 
+			/**/
+			/**/
+			/**/
+			/**/
+			/**/
+			/**/
+			/**/
+
+/*p {
+	text-align: left;
+}*/
+
+			/**/
+			/**/
+			/**/
+			/**/
+			/**/
+			/**/
+			/**/
 
 
+.example9-wrapper {
+	margin: 20px auto;
+	text-align: center;
+}	
 
+.example9-bg {
+	margin: 0 auto;
+	width: 0px;
+	height: 52px;
+	position: relative;
+	top:46px;
+	box-shadow: 0px 0px 20px rgba(0,0,0,0.2);
+	-webkit-transform: rotate(-2deg) skew(0,0);
+					-webkit-animation-name: blend;
+					-webkit-animation-duration: .5s;
+					-webkit-animation-itiration-count; 1;
+					-webkit-animation-fill-mode: forwards;
+					-webkit-animation-play-state: paused;
 
+}
 
+.example9-core {
+	margin: 0 auto;
+	width: 0px;
+	height: 40px;
+	/*top: -45px;*/
+	position: relative;
+	background-color: white;
+	-webkit-transform: rotate(0deg) skew(46deg,0);
+	 box-shadow: 0px 0px 20px rgba(0,0,0,0.2);
+	 				-webkit-animation: blend2;
+					-webkit-animation-name: blend;
+					-webkit-animation-duration: .5s;
+					-webkit-animation-delay: 1s;
+					-webkit-animation-itiration-count; 1;
+					-webkit-animation-fill-mode: forwards;
+					-webkit-animation-play-state: paused;
+}
+
+.example9-name {
+	 	font-family: 'Tinos', serif;
+	 	text-transform: uppercase;
+	 	position: relative;
+	 	font-size: 35px;
+	 	color: transparent;
+	 	bottom:49px;
+	 	/*left:15%;*/
+	 	-webkit-transform: rotate(0deg) skew(-8deg,0);
+	 				-webkit-animation-name: blend3;
+					-webkit-animation-duration: 1s;
+					-webkit-animation-delay: 2s;
+					-webkit-animation-itiration-count; 1;
+					-webkit-animation-fill-mode: forwards;
+					-webkit-animation-play-state: paused;
+}
+
+/**/
+		.example9-wrapper:hover .example9-bg {
+			-webkit-animation-play-state: running;
+		}
+
+		.example9-wrapper:hover .example9-core {
+			-webkit-animation-play-state: running;
+		}
+
+		.example9-wrapper:hover .example9-name {
+			-webkit-animation-play-state: running;
+		}		
+
+@-webkit-keyframes blend {
+    from { 	width: 0px; }
+    to { width: 340px;}
+}
+
+@-webkit-keyframes blend2 {
+    from { 	width: 0px; }
+    to { width: 340px; }
+}
+
+@-webkit-keyframes blend3 {
+    from { 	color: transparent; }
+    to { color: #F4F4F4; text-shadow:0px 1px 0px #ECECEC;}
+}
