--- a/body.css
+++ b/body.css
@@ -610,3 +610,295 @@ p {
     from { 	color: transparent; }
     to { color: #F4F4F4; text-shadow:0px 1px 0px #ECECEC;}
 }
+
+			/**/
+			/**/
+			/**/
+			/**/
+			/**/
+			/**/
+			/**/
+
+.example10-wrapper {
+	margin: 20px auto;
+	text-align: center;
+}	
+
+.example10-bg {
+	margin: 0 auto;
+	width: 340px;
+	height: 240px;
+	background-color: orange;
+}
+
+.example10-content {
+	margin: 0 auto;
+	width: 100px;
+	height: 100px;
+	background-color: white;
+	position: relative;
+	top: 70px;
+	    -webkit-animation: example10-content 5s 0s linear infinite;
+}
+
+@-webkit-keyframes example10-content {
+	0% {
+		-webkit-transform: rotate(0deg);
+	}
+	100% {
+		-webkit-transform: rotate(360deg);
+	}
+}
+
+			/**/
+			/**/
+			/**/
+			/**/
+			/**/
+			/**/
+			/**/
+
+
+.example11-wrapper {
+	margin: 20px auto;
+	text-align: center;
+}	
+
+.example11-bg {
+	margin: 0 auto;
+	width: 340px;
+	height: 240px;
+	background-color: orange;
+}
+
+.example11-move {
+	/*-webkit-animation: example10-move 1s 0s linear alternate;
+	-webkit-animation-direction: alternate;*/
+	-webkit-animation-name: example10-move;
+	-webkit-animation-duration: 5s;
+	-webkit-animation-timing-function: linear;
+	-webkit-animation-delay: 0;
+	-webkit-animation-iteration-count: infinite;
+	-webkit-animation-direction: infinite;
+	-webkit-animation-play-state: running;
+
+}
+
+.example11-content {
+	margin: 0 auto;
+	width: 100px;
+	height: 100px;
+	background-color: white;
+	position: relative;
+	top: 70px;
+/*-webkit-animation: example10-content 1s 0s linear infinite;
+	-webkit-animation-direction: alternate;*/
+	-webkit-animation-name: example10-content;
+	-webkit-animation-duration: 10s;
+	-webkit-animation-timing-function: linear;
+	-webkit-animation-delay: 0;
+	-webkit-animation-iteration-count: infinite;
+	-webkit-animation-direction: infinite;
+	-webkit-animation-play-state: running;
+}
+
+@-webkit-keyframes example10-move {
+	from {
+		-webkit-transform: translate(-50px, -20px);
+	}
+	25% {
+		-webkit-transform: translate(0px, -20px);
+	}
+	50% {
+		-webkit-transform: translate(50px, -20px);
+	}
+/*	75% {
+		-webkit-transform: translate(0px, -200px);
+	}*/
+	to {
+		-webkit-transform: translate(-50px, -20px);
+	}
+}
+
+@-webkit-keyframes example10-content {
+	0% {
+		-webkit-transform: rotate(0deg);
+	}
+	100% {
+		-webkit-transform: rotate(360deg);
+	}
+}
+
+			/**/
+			/**/
+			/**/
+			/**/
+			/**/
+			/**/
+			/**/
+
+
+.example12-wrapper {
+	margin: 20px auto;
+	text-align: center;
+}	
+
+.example12-bg {
+	margin: 0 auto;
+	width: 340px;
+	height: 240px;
+	background-color: transparent;
+}
+
+.example12-container {
+ 	font-family: 'Cinzel Decorative', cursive;
+ 		  -webkit-transform-style: preserve-3d;
+	  	transform-style: preserve-3d;
+	position: absolute;
+	left: 33%;
+	top: 57%;
+	width: 100px;
+	height: 100px;
+	border-radius: 50px;
+	background-color: red;
+		-webkit-animation:move 10s infinite;
+		-webkit-animation-timing-function:ease-in-out;
+}
+
+.example12-content {
+	position: absolute;
+	left: 40%;
+	top: 50%;
+	width: 100px;
+	height: 100px;
+	border-radius: 50px;
+	background-color: orange;
+}
+
+.example12-content .content1 {
+	-webkit-transform:translate3d(0, 0, -1px);
+	position: absolute;
+	width: 100px;
+	height: 100px;
+		left: 40%;
+	top: 50%;
+	background-color: green;
+}
+
+.example12-content .content2 {
+	-webkit-transform:translate3d(0, 0, 0px);
+	background-color: green;
+}
+
+@-webkit-keyframes move {
+  0% { -webkit-transform: rotateX(0deg); 
+  }
+  100%   { -webkit-transform: rotateX(14400deg); 
+  }
+}
+
+/*@-webkit-keyframes cube {
+  0% { -webkit-transform: rotateX(0deg); 
+  }
+  100%   { -webkit-transform: rotateX(14400deg); 
+  }
+}*/
+
+			/**/
+			/**/
+			/**/
+			/**/
+			/**/
+			/**/
+			/**/
+
+h2 {
+	font-family: 'Cinzel Decorative', cursive;
+	margin: 10px;
+	text-align: left;
+	padding-top: 10px;
+	color: #363636;
+}
+
+.example13-wrapper {
+	margin: 20px auto;
+	text-align: center;
+}	
+
+.example13-insidewrapper{
+	width: inherit;
+	height:60px;
+}
+
+.example13-marker {
+		margin-top: 20px;
+		margin-left: 46%;
+	position: relative;
+}
+
+.example13-pulse {
+		width: 10px;
+		height: 10px;
+		border: 5px solid orange;
+
+		-webkit-border-radius: 30px;
+		-moz-border-radius: 30px;
+		border-radius: 30px;
+		background-color: orange;
+		z-index: 10;
+		position: absolute;
+	}
+
+	.example13-dot {
+    position: absolute;
+    height: 100px;
+		width: 100px;
+		top: -50px;
+		left: -50px;
+		z-index: 2;
+		opacity: 0;
+		border: 10px solid yellow;
+		background: yellow;
+		border-radius: 50%;
+		-webkit-animation: pulse 2s linear;
+    -webkit-animation-iteration-count: infinite;
+		-webkit-animation-play-state: paused;
+	}
+	.example13-marker:hover .example13-dot{
+		-webkit-animation-play-state: running;
+	}
+
+  @-webkit-keyframes pulse {
+	 0% {-webkit-transform: scale(0);opacity: 1;}
+	 50% {-webkit-transform: scale(.5);opacity: 0.2;}
+	 100% {-webkit-transform: scale(1);opacity: 0.0;}
+	}
+
+			/**/
+			/**/
+			/**/
+			/**/
+			/**/
+			/**/
+			/**/
+
+.example13-wrapper {
+	margin: 20px auto;
+	text-align: center;
+}	
+
+.example14-form {
+	border:0; 
+	padding:10px; 
+	font-size:1.3em; 
+	font-family:Arial, sans-serif; 
+	color:#aaa; 
+	border:solid 1px #ccc; 
+	margin:0 0 20px; 
+	width:300px;
+}
+
+
+
+
+
