--- a/body.css
+++ b/body.css
@@ -945,14 +945,201 @@ border-color: orange;
   100%{left: 300px;}
 }
 
+			/**/
+			/**/
+			/**/
+			/**/
+			/**/
+			/**/
+			/**/
+
+.example16-wrapper {
+	margin: 20px auto;
+	text-align: center;
+	background-color: #292929;
+	border: 10px solid black;
+	width: 250px;
+	/*height: 270px;*/
+}
+
+.example16-loader {
+	margin: 50px auto;
+	position: relative;
+	display: inline-block;
+  width:100px;
+  height:100px;
+  border:1px solid #FFA500;
+  /*float:left;*/
+  /*margin-right:20px;*/
+  -webkit-animation-name: grow;
+	-webkit-animation-duration: 3s;
+	/*-webkit-animation-timing-function: linear;*/
+	-webkit-animation-delay: 0;
+	-webkit-animation-iteration-count: infinite;
+	-webkit-animation-direction: infinite;
+	-webkit-animation-play-state: running;
+}
+
+@-webkit-keyframes grow{
+  0%{
+    opacity:0;
+    -webkit-transform: scale(0.1,0.1);
+    -webkit-transform: rotate(0deg);
+  	}
+  
+  50%{
+    opacity:1;
+    -webkit-transform: scale(1,1);
+    /*-webkit-transform: rotate(180deg);*/
+  	}
+  
+  100%{
+    opacity:0;
+    -webkit-transform: scale(0.1,0.1);
+    -webkit-transform: rotate(0deg);
+  	}
+  }
 
 
+			/**/
+			/**/
+			/**/
+			/**/
+			/**/
+			/**/
+			/**/
 
 
+.example17-wrapper {
+	margin: 20px auto;
+	text-align: center;
+}
 
+.example17-bg {
+	width: 400px;
+	height: 300px;
+	position: relative;
+	margin:0 auto;
+	background-color: #ddd;
+	border: 10px solid black;
+}
 
+.effect2 {
+	width: 375px;
+	height: 200px;
+	margin: -122px auto;
+	background-color: white;
+	position: relative;
+	-webkit-transform: rotate(3deg);
+}
 
+.example17-page {
+  position: absolute;
+  /*content: "";*/
+  top: 156px;
+  left: 16px;
+  width: 173px;
+  height: 60px;
+  /*top: 80%;*/
+  max-width:370px;
+  background: #777;
+  box-shadow: 0 15px 10px #777;
+  -webkit-transform: rotate(-3deg);
+}
 
+/*.effect2:before {
+  -webkit-transform: rotate(3deg);
+  right: 10px;
+  left: auto;
+}
+*/
+
+			/**/
+			/**/
+			/**/
+			/**/
+			/**/
+			/**/
+			/**/
+
+.example18-wrapper {
+	margin: 20px auto;
+	text-align: center;
+}
+
+.example18-bg {
+	width: 400px;
+	height: 300px;
+	position: relative;
+	margin:0 auto;
+	background-color: rgb(252, 252, 252);
+	border: 10px solid black;
+}
+
+.example18-effect1 {
+	width: 375px;
+	height: 200px;
+	margin: 50px auto;
+	background-color: white;
+	position: relative;
+	box-shadow: 8px 8px 10px -6px rgba(0,0,0,0.1);
+	-webkit-transform: rotate(0deg);
+}
+
+			/**/
+			/**/
+			/**/
+			/**/
+			/**/
+			/**/
+			/**/
+
+.example19-wrapper {
+	margin: 20px auto;
+	text-align: center;
+}
+
+.roundedOne {
+	color: transparent;
+	margin: 0 auto;
+  background: #D8D9DB;
+	border-radius: 50%;
+	box-shadow: 0 0px 3px black;      
+	display: block;
+	position: relative;
+	width: 40px; 
+  height: 40px;
+  transition: all .1s linear;
+}
+
+input[type=checkbox] {
+	display: none;
+}
+
+label span {
+	background: rgba(154, 255, 152, 1);
+	border-radius: 50%;
+	content: "";
+	display: block;
+  box-shadow: inset 0 0px 5px 1px rgba(105, 106, 40, 0.47);
+	position: absolute; 
+	top: 5px;
+	left: 5px;
+	width: 30px; 
+  height: 30px;
+	-webkit-transition: all .3s ease;
+}
+
+input[type=checkbox]:checked + label span {
+	margin:0 auto;
+	background-color: #fff;
+	box-shadow: inset 0 -1px 9px 1px rgba(0,0,0,0.5);
+}
+
+input[type=checkbox]:checked + label {
+    background: #4BD865;
+    
+}
 
 
 
