--- a/body.css
+++ b/body.css
@@ -30,7 +30,7 @@
 }
 
 .example1-button:active {
-	margin-top: 27px;
+	margin-top: 33px;
 	height: 29px;
 	box-shadow: inset 0 0px 0 rgb(202, 191, 191);
 	line-height: 30px;
@@ -91,9 +91,9 @@
 			/**/
 			/**/
 
-/*.book-example3 {
+.book-example3 {
 	width:450px;
-	height:450px;
+	height:100%;
 	margin:20px auto;
 	border: 5px solid orange;
 	position: relative;
@@ -104,7 +104,7 @@
 	float: left;
 	position: inherit;
 	left: 211px;
-	top: 30px;
+	top: 5px;
 }
 
 .example3-body {
@@ -161,10 +161,10 @@
         -webkit-transform: scale(.9,.9);
     }  
     100% {  
-        -webkit-transform: translate3d(0px,0px,0px;  
+        -webkit-transform: translate3d(0px,0px,0px);  
         	-webkit-transform: scale(1,1);
     }  
-}  */
+}  
 
 			/**/
 			/**/
@@ -180,7 +180,8 @@
 	margin:20px auto;
 	background-color: transparent;
 				-webkit-animation: words 1s all ease; 
-			-webkit-animation-fill-mode: forwards; 
+			-webkit-animation-fill-mode: forwards;
+	clear: both; 
 }
 
 .ball-container {
@@ -238,7 +239,7 @@
 }
 
 .example5 {
-  width: 350px;
+  width: 100%;
   height: 220px;
   /*top: 60px;*/
   margin: 0 auto;
@@ -247,7 +248,7 @@
  }
 
 .example5-text {
-	width: 320px;
+	width: 100%;
   height: 200px;
   /*left: 37px;*/
 	margin: 0 auto;
@@ -258,7 +259,7 @@
 
 .example5-text-inside {
 	font-family: 'Cinzel Decorative', cursive;
-	width: 280px;
+	width: 92%;
   height: 150px;
   margin: 0 auto;
 	top: 15px;
@@ -271,41 +272,6 @@
   font-size: 50px;
   color: rgba(227,227,227,0.5); 
 }
-
-/*.example5-text-inside:hover {
-    animation: shake 1s infinite;
-  -webkit-animation: shake 5s infinite alternate ease; 
-} */
-
-/*.example5-text:hover {
-   animation: rattle 1s infinite;
-  -webkit-animation: shake 2s infinite alternate ease-in-out; 
-} */
-
-/*@-webkit-keyframes shake {  
-  0% {  
-      -webkit-transform: rotate(0deg) translate3d(0px, 0px, 0px);
-  }  
-  40% {  
-      -webkit-transform: rotate(-3deg) translate3d(-2px, -1px, 0px);  
-  }
-  100% {  
-      -webkit-transform: rotate(0deg) translate3d(0px, 0px, 0px);  
-  }  
-}  
-
-
-@-webkit-keyframes rattle {  
-  0% {  
-      -webkit-transform: rotate(0deg) translate3d(0px, 0px, 0px);
-  }  
-  40% {  
-      -webkit-transform: rotate(-3deg) translate3d(-2px, -1px, 0px);  
-  }
-  100% {  
-      -webkit-transform: rotate(1deg) translate3d(0px, 0px, 0px);  
-  }  
-}  */
 
 			/**/
 			/**/
@@ -409,7 +375,7 @@ p {
  }
 
   .example6-box:hover .example6-hello {
-  color: #363636;;
+  color: orange;
   font-size:30px;
 	-webkit-transition: all 1s 1s linear;
  	-webkit-transform: rotate(180deg);
@@ -962,19 +928,171 @@ border-color: orange;
 	/*height: 270px;*/
 }
 
-.example16-loader {
+.example16-loader-1 {
 	margin: 50px auto;
 	position: relative;
 	display: inline-block;
-  width:100px;
-  height:100px;
-  border:1px solid #FFA500;
-  /*float:left;*/
-  /*margin-right:20px;*/
-  -webkit-animation-name: grow;
-	-webkit-animation-duration: 3s;
+	width:25px;
+	height:25px;
+	border:1px solid #FFA500;
+	/*float:left;*/
+	/*margin-right:20px;*/
+	-webkit-animation-name: grow;
+	-webkit-animation-duration: 2s;
 	/*-webkit-animation-timing-function: linear;*/
 	-webkit-animation-delay: 0;
+	-webkit-animation-iteration-count: infinite;
+	-webkit-animation-direction: infinite;
+	-webkit-animation-play-state: running;
+}
+
+@-webkit-keyframes grow{
+  0%{
+    opacity:0;
+    -webkit-transform: scale(0.1,0.1);
+    -webkit-transform: rotate(0deg);
+  	}
+  
+  50%{
+    opacity:1;
+    -webkit-transform: scale(1,1);
+    /*-webkit-transform: rotate(180deg);*/
+  	}
+  
+  100%{
+    opacity:0;
+    -webkit-transform: scale(0.1,0.1);
+    -webkit-transform: rotate(0deg);
+  	}
+  }
+
+.example16-loader-2 {
+	margin: 50px auto;
+	position: relative;
+	display: inline-block;
+	width:25px;
+	height:25px;
+	border:1px solid #FFA500;
+	/*float:left;*/
+	/*margin-right:20px;*/
+	-webkit-animation-name: grow;
+	-webkit-animation-duration: 2s;
+	/*-webkit-animation-timing-function: linear;*/
+	-webkit-animation-delay: .2s;
+	-webkit-animation-iteration-count: infinite;
+	-webkit-animation-direction: infinite;
+	-webkit-animation-play-state: running;
+}
+
+@-webkit-keyframes grow{
+  0%{
+    opacity:0;
+    -webkit-transform: scale(0.1,0.1);
+    -webkit-transform: rotate(0deg);
+  	}
+  
+  50%{
+    opacity:1;
+    -webkit-transform: scale(1,1);
+    /*-webkit-transform: rotate(180deg);*/
+  	}
+  
+  100%{
+    opacity:0;
+    -webkit-transform: scale(0.1,0.1);
+    -webkit-transform: rotate(0deg);
+  	}
+  }
+
+.example16-loader-3 {
+	margin: 50px auto;
+	position: relative;
+	display: inline-block;
+	width:25px;
+	height:25px;
+	border:1px solid #FFA500;
+	/*float:left;*/
+	/*margin-right:20px;*/
+	-webkit-animation-name: grow;
+	-webkit-animation-duration: 2s;
+	/*-webkit-animation-timing-function: linear;*/
+	-webkit-animation-delay: .4s;
+	-webkit-animation-iteration-count: infinite;
+	-webkit-animation-direction: infinite;
+	-webkit-animation-play-state: running;
+}
+
+@-webkit-keyframes grow{
+  0%{
+    opacity:0;
+    -webkit-transform: scale(0.1,0.1);
+    -webkit-transform: rotate(0deg);
+  	}
+  
+  50%{
+    opacity:1;
+    -webkit-transform: scale(1,1);
+    /*-webkit-transform: rotate(180deg);*/
+  	}
+  
+  100%{
+    opacity:0;
+    -webkit-transform: scale(0.1,0.1);
+    -webkit-transform: rotate(0deg);
+  	}
+  }
+
+.example16-loader-4 {
+	margin: 50px auto;
+	position: relative;
+	display: inline-block;
+	width:25px;
+	height:25px;
+	border:1px solid #FFA500;
+	/*float:left;*/
+	/*margin-right:20px;*/
+	-webkit-animation-name: grow;
+	-webkit-animation-duration: 2s;
+	/*-webkit-animation-timing-function: linear;*/
+	-webkit-animation-delay: .6s;
+	-webkit-animation-iteration-count: infinite;
+	-webkit-animation-direction: infinite;
+	-webkit-animation-play-state: running;
+}
+
+@-webkit-keyframes grow{
+  0%{
+    opacity:0;
+    -webkit-transform: scale(0.1,0.1);
+    -webkit-transform: rotate(0deg);
+  	}
+  
+  50%{
+    opacity:1;
+    -webkit-transform: scale(1,1);
+    /*-webkit-transform: rotate(180deg);*/
+  	}
+  
+  100%{
+    opacity:0;
+    -webkit-transform: scale(0.1,0.1);
+    -webkit-transform: rotate(0deg);
+  	}
+  }
+
+.example16-loader-5 {
+	margin: 50px auto;
+	position: relative;
+	display: inline-block;
+	width:25px;
+	height:25px;
+	border:1px solid #FFA500;
+	/*float:left;*/
+	/*margin-right:20px;*/
+	-webkit-animation-name: grow;
+	-webkit-animation-duration: 2s;
+	/*-webkit-animation-timing-function: linear;*/
+	-webkit-animation-delay: .8s;
 	-webkit-animation-iteration-count: infinite;
 	-webkit-animation-direction: infinite;
 	-webkit-animation-play-state: running;
@@ -1416,14 +1534,14 @@ input[type=checkbox]:checked + label {
 	margin: 0 auto;
 	width: 370px;
 	height:200px;
-	background-color: grey;
+	margin-bottom: 15px;
+	background-color: white;
 	  	-webkit-transition: all .5s ease;
 
 }
 
 .example25-bg:hover {
-  -webkit-box-shadow: inset 0 0 0 25px white;
-
+  box-shadow: inset 0px 0px 20px rgba(0,0,0,0.5);
 }
 			/**/
 			/**/
@@ -1443,13 +1561,15 @@ input[type=checkbox]:checked + label {
 	margin: 0 auto;
 	width: 370px;
 	height:200px;
-	background-color: grey;
+	background-color: white;
 	  	-webkit-transition: all .5s ease-in;
+    box-shadow: inset 0px 0px 20px rgba(0,0,0,0.5);
 }
 
 
 .example26-bg:hover{
   -webkit-transform: rotateZ(-30deg);
+
 }
 
 			/**/
@@ -1469,7 +1589,8 @@ input[type=checkbox]:checked + label {
 	margin:0 auto;
 	width: 370px;
 	height:200px;
-	background-color: grey;
+	background-color: white;
+		  box-shadow: inset 0px 0px 20px rgba(0,0,0,0.5);
 	  	-webkit-transition: all .5s ease-in;
 }
 
@@ -1494,7 +1615,7 @@ input[type=checkbox]:checked + label {
 	margin:0 auto;
 	width: 370px;
 	height:200px;
-	background-color: grey;
+	background-color: white;
   -webkit-animation-name: spin;
 	-webkit-animation-duration: 3s;
 	-webkit-animation-timing-function: linear;
@@ -1502,6 +1623,7 @@ input[type=checkbox]:checked + label {
 	-webkit-animation-iteration-count: infinite;
 	-webkit-animation-direction: infinite;
 	-webkit-animation-play-state: paused;
+    box-shadow: inset 0px 0px 20px rgba(0,0,0,0.5);
 }
 
 .example28-bg:hover{
@@ -1534,13 +1656,18 @@ input[type=checkbox]:checked + label {
 	margin:0 auto;
 	width: 370px;
 	height:200px;
-	background-color: grey;
+	background-color: white;
+	  box-shadow: inset 0px 0px 20px rgba(0,0,0,0.5);
+
 	-webkit-animation-name: translate;
 	-webkit-animation-duration: 3s;
 	/*-webkit-animation-timing-function: linear;*/
 	-webkit-animation-delay: 0;
 	-webkit-animation-iteration-count: infinite;
 	-webkit-animation-direction: infinite;
+	-webkit-animation-play-state: paused;
+}
+.example29-bg:hover {
 	-webkit-animation-play-state: running;
 }
 
@@ -1571,7 +1698,8 @@ input[type=checkbox]:checked + label {
 	margin:0 auto;
 	width: 370px;
 	height:200px;
-	background-color: grey;
+	margin-bottom: 25px;
+	background-color: white;
 	-webkit-animation-name: weee;
 	-webkit-animation-duration: 3s;
 	/*-webkit-animation-timing-function: linear;*/
@@ -1579,10 +1707,14 @@ input[type=checkbox]:checked + label {
 	-webkit-animation-iteration-count: infinite;
 	-webkit-animation-direction: forwards;
 	-webkit-animation-play-state: paused;
+		  box-shadow: inset 0px 0px 20px rgba(0,0,0,0.5);
+
 }
 
 .example30-bg:hover {
 	-webkit-animation-play-state: running;
+
+
 }
 
 @-webkit-keyframes weee {
@@ -1590,6 +1722,6 @@ input[type=checkbox]:checked + label {
 		-webkit-transform: translate(0,0);
 	}
 	100% {
-		-webkit-transform: translate(0,-200px);
+		-webkit-transform: translate(0,2000px);
 	}`
 }
