--- a/body.css
+++ b/body.css
@@ -148,8 +148,7 @@
     40% {  
         -webkit-transform: translate3d(0px,-3px,0px);  
     }  
-    100% '
-    {  
+    100% {  
         -webkit-transform: translate3d(0px,0px,0px);  
     }  
 }  
